<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="status_none">No messages</string>
    <string name="status_a">Heen</string>
    <string name="status_b">Wachten</string>
    <string name="status_c">Lossen</string>
    <string name="status_d">Terug</string>
    <string name="status_e">Pauze</string>
    <string name="phone">Phone</string>
    <string name="maps">Maps</string>
    <string name="unique_id">UniqueID</string>
    <string name="activity">Activiteit</string>
    <string name="service">Service</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="post_url">http://tracker.local/post.php</string>
    <string name="post_salt">secret_salt</string>
</resources>
